# CineSync

./: .claudeignore  .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  README.md  TODO.md  config-template.yaml  main.py  objective.md  project_context.md  pyproject.toml  requirements.txt
data/: cinesync.db  table_flat.sql  tmdb_config.json  tmdb_ignore.csv
data/discover/movie/: 11.json  246.json
data/html_sample/: letterboxd_sample.html
data/logs/: letterboxd_scrape_failures.jsonl  tmdb_ignore.csv  tmdb_keep.csv
data/omdb_response_sample/: tt0363226.json  tt0903747.json  tt11280740.json  tt1632701.json  tt26657236.json
data/samples/html/: imdb_smaple.html  rt_sample.html
data/tmdb_response_sample/movie/: 1083381.json
data/tmdb_response_sample/tv/: 1396.json  37680.json  456.json  95396.json
docs/: PROJECT_CONTEXT.md  TODO.md  objective.md
notebooks/: 01_Data_Wrangling.ipynb  01_collect.ipynb  01a_Data_Wrangling.ipynb  01b_Candidate_Summary.ipynb  01b_candidate_discovery.ipynb  imdb_ingest.ipynb  imdb_ingest.py  letterboxd_ingest.py  tmdb_ingest.py  tmdb_sweep.py
pipelines/: build_flats.py  imdb_ingest.py  letterboxd_ingest.py  tmdb_ingest.py  wikidata_ingest.py
scratch/: imdb_scrape_demo.ipynb  letterboxd_scrape_demo.ipynb  scraping_options.ipynb  tmdb_api_demo.ipynb  tmdb_config.py  tmdb_discover.py  wikidata_scrape_demo.ipynb
src/: config_loader.py  init_db.py  net.py  schema.sql  tmdb_config.py
src/cinesync/: config_loader.py  critic_score.py  date_windows.py  db_writer.py  discover.py  init_db.py  paths.py  recency.py  schema.sql  sync_pipeline.py  tmdb_parser.py
src/cinesync/ingestion/: crud.py  date_windows.py  db_crud.py  db_writer.py  discover.py  imdb_dataset.py  imdb_fetch.py  imdb_parser.py  sync_pipeline.py  tmdb_export_ingest.py  tmdb_parser.py
src/cinesync/ingestion/imdb/: bulk.py  graphql.py
src/cinesync/ingestion/tmdb/: date_windows.py  fetch.py  popularity.py
src/cinesync/ingestion/wikidata/: __init__.py  parse.py  sparql.py  wikipedia.py
src/cinesync/schemas/: flat_coverage.sql  flat_imdb.sql  flat_letterboxd.sql  flat_rt.sql  flat_tmdb.sql  flat_wiki.sql  letterboxd.sql  schema.sql  schema.sqltoerdiagram.json  table_flat.sql
src/cinesync/utils/: net.py
tests/: failed_letterboxd.ipynb  letterboxd.sql  letterboxd_rt_scrape.ipynb  omdb_api_test.py  scraping_options.ipynb  scraping_test.ipynb  tmdb_api_test.py  tmdb_config.py  tmdb_discover.py  tmdb_discover_test.py  tmdb_media_details.py  tmdb_parse.ipynb  tmdb_parse_test.ipynb
