[project]
name = "cinesync"
version = "0.1.0"
description = "Local movie/TV recommendation system for individuals, couples, or groups"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "parsel>=1.11.0",
    "plotly>=6.8.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    # "beautifulsoup4>=4.15.0",    
    # "praw",
    # "scikit-learn",
    # "sentence-transformers",
    # "numba>=0.59",
    # "umap-learn",
    # "hdbscan",
    # "lightgbm",
    # "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cinesync"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "F401",  # unused imports
    # "I",     # import sorting (all isort rules)
    "N999",  # Invalid module name
    "RUF002",  # En dash / hyphen ignore
    "RUF003", # En dash / hyphen ignore
    "PLR0917",  # Too many positional arguments
    "PLR0913", # Too many arguments
    "FBT001", # Boolean-typed positional argument
    "FBT002", # Boolean default positional argument
    "N806", # Variable in function to be lowercase
    "N803", # Argument name should be lowercase
    "DOC", # Documentation errors
    "TC003", # imports that are only used for type annotations, but aren't defined in a type-checking block
]

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python3"
